<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeworkContentActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleMarginEnd="30dp">

        <include
            layout="@layout/toolbar_homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff000000" />

        <com.bm.library.PhotoView
            android:id="@+id/hw_photoview"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/myhomework_picture"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:background="@mipmap/background2"
                />

            <TextView
                android:id="@+id/myhomework_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/subject"/>

            <TextView
                android:id="@+id/myhomework_schoolyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/schoolyear"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diffcult"/>

                <RatingBar
                    android:id="@+id/myhomework_difficult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:clickable="true"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="0.5"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myhomework_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:text="@string/time" />


            <RatingBar
                android:id="@+id/myhomework_review_rating"
                style="@style/RatingStyle"
                android:layout_width="65dp"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:isIndicator="false"
                android:clickable="true"
                android:numStars="5"
                android:stepSize="0.5"

                />

            <TextView
                android:id="@+id/myhomework_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="已经复习" />




        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/homework_answer"
            android:background="@color/palegreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hw_image"
                android:layout_margin="5dp"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_weight="4"
                android:background="@mipmap/background2"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="15dp"
                android:text="文字答案" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:ellipsize="none"
                android:inputType="textMultiLine"
                android:maxLines="30" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/review_of"
            android:background="@color/palegreen"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="6"
           >

           <ImageView
               android:id="@+id/review_image"
               android:layout_width="120dp"
               android:layout_height="60dp"
               android:layout_margin="10dp"
               android:background="@mipmap/background2"/>

           <TextView
               android:id="@+id/review_paper"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:text="复习试卷"/>


       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delete"
                android:background="#df1919"
                android:textColor="#fff"
                android:gravity="center"/>
        </LinearLayout>




    </LinearLayout>



</LinearLayout>